<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.lioncorps</groupId>
    <artifactId>collectionbdserver</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>collectionbdserver</name>
    <url>http://maven.apache.org</url>
    <properties>
        <lib.jackson2.version>2.4.1</lib.jackson2.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<jboss-as.home>${env.JBOSS_HOME}</jboss-as.home>
        <jboss.deployments.dir>${env.JBOSS_HOME}/standalone/deployments</jboss.deployments.dir>
    </properties>
	 <pluginRepositories>
		  <pluginRepository>
			 <id>miredot</id>
			 <name>MireDot Releases</name>
			 <url>http://nexus.qmino.com/content/repositories/miredot</url>
		  </pluginRepository>
	   </pluginRepositories>

    <dependencies>
        <!-- Provided dependencies -->
        <dependency>
            <groupId>org.jboss.spec</groupId>
            <artifactId>jboss-javaee-all-7.0</artifactId>
            <version>1.0.3.Final</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.4.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.4.1</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jackson-provider</artifactId>
            <version>3.0.13.Final</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>19.0</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.38</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.qmino</groupId>
            <artifactId>miredot-annotations</artifactId>
            <version>1.4.0</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.8.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-client</artifactId>
            <version>3.0.2.Final</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>4.0.1.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-annotations</artifactId>
            <version>3.5.6-Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.javax.persistence</groupId>
            <artifactId>hibernate-jpa-2.1-api</artifactId>
            <version>1.0.0.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>4.3.5.Final</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <version>3.3.0.Final</version>
        </dependency>


    </dependencies>
    <build>
        <finalName>${project.artifactId}</finalName>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.7</source>
                        <target>1.7</target>

                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.6</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.wildfly.plugins</groupId>
                    <artifactId>wildfly-maven-plugin</artifactId>
                    <version>1.0.2.Final</version>
                    <configuration>
                        <serverConfig>standalone-full.xml</serverConfig>
                        <jvmArgs>
                            -Djboss.bind.address=0.0.0.0
                            -XX:PermSize=256m
                            -Xdebug -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n
                        </jvmArgs>
                    </configuration>
                </plugin>
                <!-- mvn hibernate4:export to generate schema.sql in target -->
                <plugin>
                    <groupId>de.juplo</groupId>
                    <artifactId>hibernate4-maven-plugin</artifactId>
                    <version>1.0.5</version>
                    <configuration>
                        <driverClassName>com.mysql.jdbc.Driver</driverClassName>
                        <hibernateDialect>org.hibernate.dialect.MySQLDialect</hibernateDialect>
                        <target>NONE</target>
                        <type>CREATE</type>
                    </configuration>
                    <dependencies>
                        <!--<dependency>
                            <groupId>com.oracle</groupId>
                            <artifactId>ojdbc6</artifactId>
                            <version>11.2.0.2.0</version>
                        </dependency>
                        -->
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Plugin to generate DDL -->
            <plugin>
                <groupId>de.juplo</groupId>
                <artifactId>hibernate4-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>generate-dll</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>export</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.qmino</groupId>
                <artifactId>miredot-plugin</artifactId>
                <version>1.6.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>restdoc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <license>
                        UHJvamVjdHxvcmcubGlvbmNvcnBzLmNvbGxlY3Rpb25iZHNlcnZlcnwyMDE3LTAzLTA4fHRydWUjTUMwQ0ZDQmdGUDFxSC96M2w4Y2hvOUdJRzBzaTNxK3VBaFVBak82ZmFXZ2theHVHa2psMGNCcEEvTDhBRy9nPQ==
                    </license>
                    <restModel>
                        <restFramework>
                            <name>jax-rs</name>
                        </restFramework>
                        <titleNamingStrategies>
                            <strategy>tag: title</strategy>
                            <strategy>tag: summary</strategy>
                            <strategy>firstsentence</strategy>
                        </titleNamingStrategies>
                    </restModel>
                    <output>
                        <html>
                            <sections>
                                <strategy>singlepage</strategy>
                            </sections>
                            <hideIssuesTab>true</hideIssuesTab>
                            <hideLogoOnTop>true</hideLogoOnTop>
                        </html>
                        <title>Api Documentation</title>
                    </output>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <webResources>
                        <resource>
                            <!-- this is relative to the pom.xml directory -->
                            <directory>target/miredot</directory>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>miredot</id>
            <name>MireDot Releases</name>
            <url>http://nexus.qmino.com/content/repositories/miredot</url>
        </repository>
    </repositories>
</project>